--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@
 /Ejercicios/Guia1/build/
 /Clase6/nbproject/private/
 /Clase6/build/
+/Clase7/nbproject/private/
+/Clase7/build/
+/Clase7-Estacionamiento/nbproject/private/
