--- a/Clase8/nbproject/project.properties
+++ b/Clase8/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Clase7-8-Estacionamiento.jar
+dist.jar=${dist.dir}/Clase8.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/Clase7-8-Estacionamiento
+dist.jlink.output=${dist.jlink.dir}/Clase8
 excludes=
 includes=**
 jar.compress=false
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=Clase7-8-Estacionamiento
-main.class=clase7.estacionamiento.Clase7Estacionamiento
+jlink.launcher.name=Clase8
+main.class=clase8.Clase8
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
