--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@
 /Clase7-Estacionamiento/nbproject/private/
 /Clase8/nbproject/private/
 /Clase8/build/
+/Integrador/nbproject/private/
+/Integrador/build/
