--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@
 /Integrador/build/
 /Clase10Herencia/nbproject/private/
 /Clase10Herencia/build/
+/IntegradorListas/nbproject/private/
+/IntegradorListas/build/
