--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@
 /Clase10Herencia/build/
 /IntegradorListas/nbproject/private/
 /IntegradorListas/build/
+/Clase14Iterador/nbproject/private/
+/Clase14Iterador/build/
