Clase 9/10 (apuntes del lunes 6/10)

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,9 @@
 /IntegradorListas/build/
 /Clase14Iterador/nbproject/private/
 /Clase14Iterador/build/
+/PolimorfismoSubtes/nbproject/private/
+/PolimorfismoABC/nbproject/private/
+/ClaseInterfaces/nbproject/private/
+/PolimorfismoSubtes/build/
+/ClaseInterfaces/build/
+/ClaseInterfaces/dist/
