Clase de exceptions - implementacion en compumundo

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@
 /PolimorfismoSubtes/build/
 /ClaseInterfaces/build/
 /ClaseInterfaces/dist/
+/Clase15Exception/nbproject/private/
+/Clase15Exception/build/
