--- a/Clase15Exception/build.xml
+++ b/Clase15Exception/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="IntegradorCompumundo" default="default" basedir=".">
-    <description>Builds, tests, and runs the project IntegradorCompumundo.</description>
+<project name="Clase15Exception" default="default" basedir=".">
+    <description>Builds, tests, and runs the project Clase15Exception.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
@@ -58,7 +58,7 @@
 
     An example of overriding the target for project execution could look like this:
 
-        <target name="run" depends="IntegradorCompumundo-impl.jar">
+        <target name="run" depends="Clase15Exception-impl.jar">
             <exec dir="bin" executable="launcher.exe">
                 <arg file="${dist.jar}"/>
             </exec>
