--- a/Clase15Exception/nbproject/project.properties
+++ b/Clase15Exception/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Clase16Interfaces.jar
+dist.jar=${dist.dir}/Clase15Exception.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/Clase16Interfaces
+dist.jlink.output=${dist.jlink.dir}/Clase15Exception
 excludes=
 includes=**
 jar.compress=false
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=Clase16Interfaces
-main.class=claseinterfaces.ClaseInterfaces
+jlink.launcher.name=Clase15Exception
+main.class=clase15exception.Clase15Exception
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
