--- a/IntegradorListas/nbproject/project.properties
+++ b/IntegradorListas/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/IntegradorListas.jar
+dist.jar=${dist.dir}/IntegradorCompumundo.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/IntegradorListas
+dist.jlink.output=${dist.jlink.dir}/IntegradorCompumundo
 excludes=
 includes=**
 jar.compress=false
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=IntegradorListas
-main.class=integradorlistas.IntegradorListas
+jlink.launcher.name=IntegradorCompumundo
+main.class=integradorlistas.Compumundo
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
