--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,9 @@
 /ClaseInterfaces/dist/
 /Clase15Exception/nbproject/private/
 /Clase15Exception/build/
+/EmpresaLogistica/nbproject/private/
+/Gimnasio/nbproject/private/
+/Simulacro/nbproject/private/
+/Clase20MetodosInterfaces/nbproject/private/
+/Clase20Genericos/nbproject/private/
+/Clase20Genericos/build/
