Clase 30/10 Bolillero completo (generico, interfaz, metodo estatico)

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,7 @@
 /Clase20MetodosInterfaces/nbproject/private/
 /Clase20Genericos/nbproject/private/
 /Clase20Genericos/build/
+/Bolillero/nbproject/private/
+/Bolillero/build/
+/Bolillero321/nbproject/private/
+/Bolillero321/build/
