--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,9 @@
 /Bolillero/build/
 /Bolillero321/nbproject/private/
 /Bolillero321/build/
+/WildCards321/nbproject/private/
+/WildCards321/build/
+/Halloween/nbproject/private/
+/Halloween/build/
+/Ordenamiento321/nbproject/private/
+/Ordenamiento321/build/
