--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,5 @@
 /Halloween/build/
 /Ordenamiento321/nbproject/private/
 /Ordenamiento321/build/
+/SistemaAlmacenamiento/nbproject/private/
+/SistemaAlmacenamiento/build/
