--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,6 @@
 /Ordenamiento321/build/
 /SistemaAlmacenamiento/nbproject/private/
 /SistemaAlmacenamiento/build/
+/Funcionales321/nbproject/private/
+/Funcionales321/build/
+/PPBaseEspacial/nbproject/private/
